[package]
name = "test-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["multipart", "headers"] }
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tower = "0.4.13"
tower-http = "0.3.5"
